# py-charity-utils

./: .dockerignore  .gitignore  .mdl.style.rb  .mdlrc  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: .env-dist  Dockerfile  devcontainer.json
src/: main.py  pyproject.toml
src/generate_gocardless_payments_csv/: command.py
src/generate_gocardless_payments_csv/test/functional/: test_command.py
src/generate_gocardless_payments_csv/test/unit/: test_generate_gocardless_payments_csv.py
src/send_mail_with_attachment/: command.py  mail.py
src/shared/: csv_utils.py
src/shared/test/unit/: test_csv_utils.py
test-data/test-send-mail-with-attachment-template/: email.html  expected-gocardless-payments.csv  generate-gocardless-payments-csv.sh  gocardless-customers.csv  invoice-requests.csv  invoice.html  send-invoice-email.sh  sendout.sh
